[package]
name = "async-runtime-test"
version = "0.1.0"
authors = ["GreyGoo <zsw_shelter@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
fastrand = "1.4.1"
futures-lite = "1.11.3"
tracing = "0.1"
tracing-subscriber = "0.2"
num_cpus = "1.13.0"

[profile.release]
debug = true
debug-assertions = false
overflow-checks = true
lto = false